removed redundant endpoints
- Removed redundant endpoints from swagger UI.
- Cleaned console log bug.
