# src/routes/eventsRouter.js
@@ -7,7 +7,6 @@ const {
   saveEvent,
   updateEvent,
   deleteEvent,
-  getEventActivities,
 } = require("../controllers/eventsController");
 
 // @route   GET /api/v1/events
@@ -15,9 +14,6 @@ router.get("/", getAllEvents);
 
 // @route   GET /api/v1/events/:_id
 router.get("/:_id", getEvent);
-
-// @route   GET /api/v1/events/activities/:_id
-router.get("/activities/:_id", getEventActivities);
 
 // @route   POST /api/v1/events
 router.post("/", saveEvent);
